--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/screen1"
     tools:context=".activity.LoginActivity">
 
+    <!-- Image View  -->
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="151dp"
@@ -17,6 +18,7 @@
         app:layout_editor_absoluteY="-2dp"
         tools:ignore="MissingConstraints"/>
 
+    <!-- Text View  -->
     <TextView
         android:id="@+id/tv_hd_login"
         android:layout_width="252dp"
@@ -33,6 +35,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <!-- Linear Layout  -->
     <LinearLayout
         android:id="@+id/ll_edit_text"
         android:layout_width="match_parent"
@@ -81,6 +84,7 @@
             tools:ignore="MissingConstraints" />
     </LinearLayout>
 
+    <!-- Linear Layout  -->
     <LinearLayout
         android:id="@+id/ll_move_register"
         android:layout_width="wrap_content"
