--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.TopicActivity">
+    tools:context=".activity.SubjectActivity"
+    tools:ignore="ExtraText">
 
     <TextView
         android:id="@+id/sel_sub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="60dp"
         android:text="Select subject to mark your completed topics"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,33 +31,36 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/it"
+        android:id="@+id/btn_pp_it"
         android:layout_width="176dp"
         android:layout_height="52dp"
+        android:layout_marginTop="64dp"
         android:text="ICT"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="227dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sel_sub"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/phy"
+        android:id="@+id/btn_pp_phy"
         android:layout_width="176dp"
         android:layout_height="52dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="56dp"
         android:text="Physics"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chem" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_pp_it" />
 
     <Button
-        android:id="@+id/chem"
+        android:id="@+id/btn_pp_chem"
         android:layout_width="175dp"
         android:layout_height="56dp"
         android:layout_marginTop="52dp"
@@ -64,8 +69,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sel_sub" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_pp_phy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
